examples/regressions/129_int_defaulting_generalization.an
a = 1, 2
b = a
c = b

// The original bug can still be triggered using functions
// f () = b
// e = f ()

first b + 2u64
second b + 2i64


// Expected results with the function block uncommented:
// f : (forall a. (Unit -> (U64, I64) can a))
// e : (U64, I64)

// args: --check --show-types
// expected exit status: 2
// expected stderr:
// error: the argument '--check' cannot be used with '--show-types'
// 
// Usage: new-ante --check <FILES>...
// 
// For more information, try '--help'.

